--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@webcontainer/api": "^1.6.1",
     "autoprefixer": "^10",
     "firebase": "^12.7.0",
     "firebase-admin": "^13.6.0",
